<?xml version="1.0"?>
<package>
  <name>mindwave_execute_trajectory</name>
  <version>0.0.0</version>
  <description>The execute_trajectory package for mindwave</description>

  <maintainer email="lord.ataucuri@ucsp.edu.pe">Steve Ataucuri</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend> 
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>


  </export>
</package>
