<package>
    <name>mindwave_msgs</name>
    <version>0.0.1</version>
    <description>
        Common messages used throughout Mindwave like Attention, Meditation and others.
    </description>
    <author> Steve Ataucuri </author>
    <maintainer email="lord.ataucuri@ucsp.edu.pe">Steve Ataucuri</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
</package>


