<package>
  <name>mindwave_teleop</name>
  <version>0.0.1</version>
  <description>
    Teleoperation package for mindwave
  </description>
  <author> Steve Ataucuri </author>
  <maintainer email="lord.ataucuri@ucsp.edu.pe">Steve</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mindwave_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mindwave_msgs</run_depend>
</package>
