<package>
  <name>mindwave_teleop</name>
  <version>0.0.1</version>
  <description>
    Teleoperation package for mindwave
  </description>
  <author> Steve Ataucuri </author>
  <maintainer email="lord.ataucuri@ucsp.edu.pe">Steve</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mindwave_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>joint_trajectory_action</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>robotiq_msgs</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mindwave_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>robotiq_msgs</run_depend>

</package>
